--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
 
 dependencies {
 	compile group: 'org.apache.derby', name: 'derbyclient', version: '10.14.2.0'
+	compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.7.2'
 	compile 'org.springframework.boot:spring-boot-starter-jdbc'
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
