--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,11 @@ repositories {
 
 dependencies {
 	compile group: 'org.apache.derby', name: 'derbyclient', version: '10.14.2.0'
-	compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.7.2'
+    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.27.2.1'
+	compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5'
+	compile group: 'org.json', name: 'json', version: '20180813'
+	
+	
 	compile 'org.springframework.boot:spring-boot-starter-jdbc'
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
